# execute

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ENV_CONFIG_IMPLEMENTATION.md  ENV_CONFIG_INTEGRATION.md  EXECUTOR_CUSTOM.md  GRACEFUL_SHUTDOWN_TEST_NOTES.md  HEALTH_CHECK_IMPLEMENTATION.md  HOOKS_EXECUTION_IMPLEMENTATION.md  HOOK_SUPPORT_IMPLEMENTATION.md  LICENSE  PHASE2_CHECKPOINT_REPORT.md  README.md  RETRY_EXECUTION_IMPLEMENTATION.md  RETRY_INTEGRATION_IMPLEMENTATION.md  SECURITY.md  SEPARATED_TIMEOUT_IMPLEMENTATION.md  TASK_14.1_SUMMARY.md  TESTING.md  TIMEOUT_CONFIG_IMPLEMENTATION.md  ZOMBIE_REAPER_IMPLEMENTATION.md
.github/: PULL_REQUEST_TEMPLATE.md
benches/: command_pool_bench.rs
docs/: polling_optimization.md
examples/: FEATURE_COVERAGE.md  README.md  batch_benchmark.rs  comprehensive_demo.rs  config_validation_demo.rs  env_config_demo.rs  env_optimizer_benchmark.rs  error_context_demo.rs  graceful_shutdown.rs  health_check_demo.rs  hook_demo.rs  hooks_demo.rs  iouring_benchmark.rs  logging_demo.rs  metrics_demo.rs  performance_test.rs  resource_limits_demo.rs  retry_execution_demo.rs  retry_integration_demo.rs  retry_strategy_demo.rs  separated_timeout_demo.rs  submit_with_handle_demo.rs  task_cancellation_demo.rs  timeout_config_demo.rs  tokio_integration.rs  warm_pool_benchmark.rs  zombie_reaper_demo.rs
src/: backend.rs  batch_executor.rs  config.rs  env_optimizer.rs  error.rs  execution_mode.rs  executor.rs  health.rs  hooks.rs  iouring_executor.rs  lib.rs  logging.rs  main.rs  metrics.rs  pipeline.rs  pool.rs  pool_fixed.rs  pool_seg.rs  prelude.rs  process_pool.rs  semaphore.rs  task_handle.rs  task_status.rs  thread_executor.rs  warm_pool.rs  zombie_reaper.rs
tests/: command_config_timeout_test.rs  config_tests.rs  config_validation_error_message_property_test.rs  config_validation_test.rs  env_config_test.rs  env_var_clearing_property_test.rs  env_var_passing_property_test.proptest-regressions  env_var_passing_property_test.rs  error_context_property_test.proptest-regressions  error_context_property_test.rs  execution_time_stats_property_test.proptest-regressions  execution_time_stats_property_test.rs  graceful_shutdown_wait_property_test.proptest-regressions  graceful_shutdown_wait_property_test.rs  health_check_accuracy_property_test.rs  health_check_test.rs  health_status_classification_property_test.rs  hook_integration_test.rs  metrics_test.rs  (+33 more)
(+35 files in other folders)
