[package]
name = "execute"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
crossbeam-queue = "0.3"
wait-timeout = "0.2"
# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
# 指标
hdrhistogram = "7.5"
# 系统调用
nix = { version = "0.29", features = ["process", "signal"] }
# 并发
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tokio = { version = "1.40", features = ["process", "time", "rt-multi-thread"] }